welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:17: error: Unmatched closing brace '}' ignored here
  }
  ^MethodsPicture:20: error: expected class or object definition
def faireV( c : Color ){
^MethodsPicture:45: error: Unmatched closing brace '}' ignored here
}
^